--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
-body {}
+body {
+    background-color: #2f2f2f;
+    font-family: 'Lucida Sans', Verdana, sans-serif
+}
 
-.onpage {}
+.skip a {
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+}
+
+a.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007fff;
+    color: white;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-right: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+a.button:hover,
+a.button:focus {
+    background-color: #004385;
+    border: 1px solid darkgray;
+    box-sizing: border-box;
+}
+
+.onpage {
+    background-color: #004385;
+    border: 3px solid white;
+    box-sizing: border-box;
+}
