--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #2f2f2f;
-    font-family: 'Lucida Sans', Verdana, sans-serif
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    color: white;
 }
 
 .skip a {
@@ -10,13 +11,22 @@ body {
     -webkit-transition: top 1s ease-out;
     transition: top 1s ease-out;
     z-index: 1;
+    position: absolute;
+    top: -100px;
+}
+
+.skip a:focus {
+    top: 20px;
+}
+
+:focus {
+    outline: 2px solid red;
 }
 
 a.button {
     display: inline-block;
     padding: 10px 20px;
     background-color: #007fff;
-    color: white;
     border-radius: 5px;
     font-size: 16px;
     margin-right: 10px;
@@ -25,15 +35,14 @@ a.button {
     text-decoration: none;
 }
 
-a.button:hover,
-a.button:focus {
+a.button:hover {
     background-color: #004385;
-    border: 1px solid darkgray;
+    outline: 1px solid darkgray;
     box-sizing: border-box;
 }
 
 .onpage {
     background-color: #004385;
-    border: 3px solid white;
+    outline: 3px solid white;
     box-sizing: border-box;
 }
