--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,12 @@ body {
     top: -100px;
 }
 
-.skip a:focus {
-    top: 20px;
-}
-
 :focus {
     outline: 2px solid red;
+}
+
+.skip a:focus {
+    top: 20px;
 }
 
 a.button {
@@ -33,6 +33,8 @@ a.button {
     box-sizing: border-box;
     cursor: pointer;
     text-decoration: none;
+    color: white;
+    font-weight: bold;
 }
 
 a.button:hover {
@@ -45,4 +47,30 @@ a.button:hover {
     background-color: #004385;
     outline: 3px solid white;
     box-sizing: border-box;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+.tiles1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.tile1 {
+    width: 30%;
+    margin-bottom: 20px;
+}
+
+.tile1 img {
+    width: 100%;
+    height: auto;
+}
+
+figcaption {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-top: 10px;
 }
