--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ h1 {
 .tiles1 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .tile1 {
@@ -65,6 +65,22 @@ h1 {
 }
 
 .tile1 img {
+    width: 100%;
+    height: auto;
+}
+
+.tiles2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.tile2 {
+    width: 30%;
+    margin-bottom: 20px;
+}
+
+.tile2 img {
     width: 100%;
     height: auto;
 }
