--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,22 @@ figcaption {
     margin: 0;
     padding: 10px;
 }
+
+/* Desktop */
+@media screen and (min-width: 700px) {
+    .tiles1 {
+        justify-content: space-around;
+    }
+
+    .tile1 {
+        width: 30%;
+    }
+
+    .tiles2 {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .tile2 {
+        width: 30%;
+    }
+}
