--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,14 @@ h1 {
 
 .tiles2 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
     justify-items: center;
-    margin: 0 auto;
+
 }
 
 .tile2 {
-    width: 80%;
+    width: 70%;
     margin-bottom: 20px;
 }
 
@@ -88,7 +88,7 @@ h1 {
 }
 
 figcaption {
-    font-size: 1.2em;
+    font-size: 1.7em;
     font-weight: bold;
     margin-top: 10px;
     text-align: center;
@@ -98,9 +98,17 @@ figcaption {
     background: black;
     color: gray;
     text-align: center;
-    margin: 0;
     padding: 10px;
 }
 
 /* Desktop */
-@media screen and (min-width: 700px) {}
+@media screen and (min-width: 700px) {
+    figcaption {
+        font-size: 1.5em;
+        text-align: left;
+    }
+
+    .tiles2 {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
